--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@vueuse/core": "^10.9.0",
     "@vueuse/nuxt": "^10.9.0",
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "remark-reading-time": "^2.0.1"
   }
 }
